--- a/gromacs/distance/README
+++ b/gromacs/distance/README
@@ -1,35 +1,18 @@
-Once installed, this directory contains CMakelist.txt,
-Makefile.pkg and a small program that you could use as
-a template when writing your own analysis software.
-Further explanation for the template code can be found
-in the Doxygen documentation (link to the latest development
-version):
-  <http://jenkins.gromacs.org/job/Documentation_Gerrit_Nightly/javadoc/doxygen/html-user/page_analysistemplate.xhtml>
+This is a customized version of gmx distance program distributed with Gromacs (http://www.gromacs.org/). It can be used for calculating distance of individual molecules from some positon (for example center of mass of an atom group).
 
-The CMakelist.txt can be used together with cmake to
-build the template program:
+--------
+EXAMPLE:
+
+Calculate distance of molecules in group "Cholesterol" from center of mass of group "Membrane".
+
+distance -s topol.tpr -f traj.xtc -n index.ndx -oxyz xyz.xvg -oz z.xvg -oabsz absz.xvg -ref "com of group Membrane" -select "Cholesterol" -seltype res_com
+
+In addition to distance the command outputs also distance z-component and the absolute value of z-component.
+
+
+-------------
+INSTALLATION:
+
 $ source /path/to/GMXRC
-$ cmake /path/to/template
-Alternatively, setting CMAKE_PREFIX_PATH will direct cmake
-to find a particular GROMACS installation.
-
-The Makefile.pkg can be used if cmake is unavailable. It
-makes use of pkg-config to build the template program:
-$ source /path/to/GMXRC
-$ make -f Makefile.pkg
-
-You will need to make sure that you use a sufficiently similar C++
-compiler and C++ Standard Library as the one that was used for
-compiling GROMACS, preferably the same one.  Boost headers used to
-compile GROMACS are also required, and are automatically added to
-the include path by both of the above build systems.
-See the Doxygen documentation for using GROMACS as a library for
-more details about the build system used to build the template, as
-well as its limitations (link to the latest development version):
-  <http://jenkins.gromacs.org/job/Documentation_Gerrit_Nightly/javadoc/doxygen/html-user/page_usinglibrary.xhtml>
-
-----------------------------------------------------------
-
-If you are reading this in the distribution directory,
-remember that CMakelist.txt.template will be renamed to
-CMakelist.txt during the installation.
+$ cmake
+$ make
